Eliminate TestUtils
This contains only a single mis-named method and a number of static
nested classes.

This patch:
- converts nested classes to top-level, reducing the need for imprts
- moves freePort() to AbtractE2ETest.randomBindablePort() with some
  documentation
- introduces transport.http.Http{Client,Server}StackConfiguration
  for wide reuse.

Change-Id: I7f269551654761545406e591c7e7562ea5aacf70
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>